[package]
name = "rust-misc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bnum = { version = "0.8.0", features = ["rand"] }
crypto-bigint = { version = "0.5.2", features = ["rand"] }
home = "0.5.5"
ibig = { version = "0.3.6", features = ["rand"] }
num-bigint = "0.4.3"
ordered-float = "3.7.0"
rand = "0.8.5"
rug = "1.20.1"
